crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__variable_scope-4.snap
---
source: tests/symbol_table/alpha034.rs
expression: a_defs.get(&87)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 75,
        end: 76,
        is_public: false,
    },
)
