crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__variable_scope-5.snap
---
source: tests/symbol_table/alpha034.rs
expression: a_defs.get(&118)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 112,
        end: 113,
        is_public: false,
    },
)
