crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__variable_scope-6.snap
---
source: tests/symbol_table/alpha034.rs
expression: a_defs.get(&166)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 154,
        end: 155,
        is_public: false,
    },
)
