crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__variable_scope-7.snap
---
source: tests/symbol_table/alpha034.rs
expression: a_defs.get(&220)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 208,
        end: 209,
        is_public: false,
    },
)
