crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__variable_scope-8.snap
---
source: tests/symbol_table/alpha034.rs
expression: a_defs.get(&278)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 262,
        end: 263,
        is_public: false,
    },
)
