crates/server/tests/analysis/snapshots/r#mod__symbol_table__alpha034__variable_scope.snap
---
source: tests/symbol_table/alpha034.rs
expression: a_defs.get(&16)
---
Some(
    SymbolLocation {
        file: FileId(
            0,
        ),
        start: 9,
        end: 10,
        is_public: false,
    },
)
